--- a/docs/pipelines/toc.yml
+++ b/docs/pipelines/toc.yml
@@ -378,6 +378,7 @@
     href: process/templates.md
   - name: Triggers
     href: build/triggers.md
+    displayName: scheduled, scheduled triggers, pr, pr triggers, ci, ci triggers, build completion triggers
   - name: Users
     href: policies/set-permissions.md 
   - name: Variable groups
