--- a/docs/security-access-billing/index.yml
+++ b/docs/security-access-billing/index.yml
@@ -91,7 +91,7 @@ landingContent:
             url: ../organizations/billing/set-up-billing-for-your-organization-vs.md?toc=/azure/devops/security-access-billing/toc.json&bc=/azure/devops/security-access-billing/breadcrumb/toc.json
           - text: Buy CI/CD for Azure DevOps
             url: ../organizations/billing/buy-more-build-vs.md?toc=/azure/devops/security-access-billing/toc.json&bc=/azure/devops/security-access-billing/breadcrumb/toc.json
-          - text: Buy access to Azure DevOps Server or Azure Test Plans
+          - text: Try Azure Test Plans for free
             url: ../organizations/billing/try-additional-features-vs.md?toc=/azure/devops/security-access-billing/toc.json&bc=/azure/devops/security-access-billing/breadcrumb/toc.json
   - title: Manage work tracking permissions (Azure Boards)
     linkLists:
