billing TOC fix

--- a/docs/organizations/billing/toc.yml
+++ b/docs/organizations/billing/toc.yml
@@ -10,6 +10,8 @@
     href: buy-basic-access-add-users.md
   - name: Try Azure Test Plans for free
     href: try-additional-features-vs.md
+  - name: Buy access to Azure DevOps Server or Azure Test Plans
+    href: buy-access-tfs-test-hub.md
   - name: Buy CI/CD
     href: buy-more-build-vs.md
   - name: Buy Azure Artifacts
