removing 12 or so sub-index pages, redirecting to overview articles (#320)

--- a/docs/organizations/toc.yml
+++ b/docs/organizations/toc.yml
@@ -132,7 +132,7 @@
   - name: Marketplace & extensibility  
     href: ../marketplace-extensibility/index.yml
   - name: Public projects
-    href: ./public/index.md
+    href: ./public/about-public-projects.md
   - name: Azure Boards
     href: ../boards/index.yml
   - name: Azure Repos
