--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -43,7 +43,7 @@
   "git_repository_branch_open_to_public_contributors": "master",
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
-  "enable_incremental_build": false,
+  "enable_incremental_build": true,
   "need_pr_comments": false,
   "resolve_user_profile_using_github": true,
   "contribution_branch_mappings": {},
