Added 2 resource links to TOC (#331)

--- a/docs/marketplace-extensibility/toc.yml
+++ b/docs/marketplace-extensibility/toc.yml
@@ -40,3 +40,7 @@
     href: /azure/devops/organizations/index
   - name: Build Visual Studio extensions
     href: /visualstudio/extensibility/shipping-visual-studio-extensions
+  - name: Build apps for Windows
+    href: /windows/apps/
+  - name: Mobile application development in Microsoft
+    href: /azure/mobile-apps/
