--- a/docs/service-hooks/toc.yml
+++ b/docs/service-hooks/toc.yml
@@ -10,6 +10,8 @@
     href: services/jenkins.md
   - name: Create a service hook with Trello
     href: services/trello.md
+  - name: Create a service hook with Datadog
+    href: services/datadog.md
   - name: Create a service hook with Microsoft Teams
     href: services/teams.md
 - name: How-to Guides
