--- a/docs/boards/toc.yml
+++ b/docs/boards/toc.yml
@@ -76,12 +76,29 @@
       href: backlogs/office/resolve-excel-data-validation-errors.md?
     - name: Resolve invalid links in an Excel tree list
       href: backlogs/office/resolve-excel-invalid-links-tree-list.md
+- name: Azure Boards & GitHub
+  href: github/toc.yml 
 - name: Integrations and extensions
   items:
-  - name: First-party extensions
-    href: extensions/toc.yml
+  - name: Overview
+    href: index.md
+  - name: Azure Boards with Slack
+    href: ../integrations/boards-slack.md
+  - name: Azure Boards with Teams
+    href: ../integrations/boards-teams.md
+  - name: Dependency Tracker
+    href: dependency-tracker/overview.md
+    items:  
+    - name: Create a dependency
+      href: dependency-tracker/create-dependency.md
+    - name: Dependency views
+      href: dependency-tracker/view-dependencies.md
+    - name: Timeline
+      href: dependency-tracker/timeline.md  
+    - name: Risk graph
+      href: dependency-tracker/risk-graph.md        
   - name: Project Server Integration (Deprecated)
-    href: /azure/devops/reference/tfs-ps-sync/index
+    href: ../../reference/tfs-ps-sync/index.md
 - name: REST API Reference
   items:
   - name: Work Items
