--- a/release-notes/TOC.yml
+++ b/release-notes/TOC.yml
@@ -6,6 +6,8 @@
   - name: 2019
     expanded: true
     items:
+    - name: November 4
+      href: 2019/sprint-160-update.md 
     - name: October 14
       href: 2019/sprint-159-update.md 
     - name: September 23
@@ -330,6 +332,8 @@
       href: 2019/boards/sprint-146-update.md
 - name: Azure Repos
   items:
+    - name: November 4
+      href: 2019/repos/sprint-160-update.md 
     - name: October 14
       href: 2019/repos/sprint-159-update.md 
     - name: September 23
@@ -354,6 +358,8 @@
       href: 2019/repos/sprint-147-update.md
 - name: Azure Pipelines
   items:
+    - name: November 4
+      href: 2019/pipelines/sprint-160-update.md
     - name: October 14
       href: 2019/pipelines/sprint-159-update.md
     - name: September 23
@@ -394,6 +400,8 @@
       href: 2019/testplans/sprint-154-update.md
 - name: Azure Artifacts
   items:
+    - name: November 4
+      href: 2019/artifacts/sprint-160-update.md
     - name: September 3
       href: 2019/artifacts/sprint-157-update.md
     - name: August 12
@@ -446,6 +454,8 @@
       href: 2019/general/sprint-146-update.md
 - name: Reporting
   items:
+    - name: November 4
+      href: 2019/reporting/sprint-160-update.md
     - name: September 23 
       href: 2019/reporting/sprint-158-update.md
     - name: September 3 
@@ -460,6 +470,8 @@
       href: 2019/reporting/sprint-147-update.md
 - name: Wiki
   items:
+    - name: November 4
+      href: 2019/wiki/sprint-160-update.md  
     - name: October 14
       href: 2019/wiki/sprint-159-update.md  
     - name: September 23
