--- a/docs/pipelines/toc.yml
+++ b/docs/pipelines/toc.yml
@@ -540,11 +540,11 @@
       items:
       - name: App Center Test
         href: tasks/test/app-center-test.md
-      - name: Cloud-based Apache JMeter Load Test  (Deprecated)
+      - name: Cloud-based Apache JMeter Load Test
         href: tasks/test/run-jmeter-load-test.md
-      - name: Cloud-based Load Test  (Deprecated)
+      - name: Cloud-based Load Test
         href: tasks/test/cloud-based-load-test.md
-      - name: Cloud-based Web Performance Test  (Deprecated)
+      - name: Cloud-based Web Performance Test
         href: tasks/test/cloud-based-web-performance-test.md
       - name: Container Structure Test Task
         href: tasks/test/container-structure-test-task.md
@@ -576,7 +576,7 @@
         href: tasks/package/nuget-authenticate.md
       - name: NuGet restore, pack, and publish
         href: tasks/package/nuget.md
-      - name: PyPI Publisher  (Deprecated)
+      - name: PyPI Publisher
         href: tasks/package/pypi-publisher.md
       - name: Python Pip Authenticate
         href: tasks/package/pip-authenticate.md
