--- a/docs/pipelines/toc.yml
+++ b/docs/pipelines/toc.yml
@@ -186,28 +186,29 @@
     items:
     - name: Test glossary
       href: test/test-glossary.md
+    - name: UI testing considerations
+      href: test/ui-testing-considerations.md
     - name: UI test with Selenium
       href: test/continuous-test-selenium.md
     - name: Review test results
       href: test/review-continuous-test-results-after-build.md
     - name: Analyze test results
-      href: test/test-analytics.md
+      href: test/test-analytics.md  
+    - name: Requirements traceability
+      href: test/requirements-traceability.md
     - name: Review code coverage
       href: test/review-code-coverage-results.md
     - name: Code coverage for pull requests
-      href: test/codecoverage-for-pullrequests.md    
-    - name: Requirements traceability
-      href: test/requirements-traceability.md
-    - name: Use Test Impact Analysis
-      href: test/test-impact-analysis.md
+      href: test/codecoverage-for-pullrequests.md  
     - name: Run tests in parallel
       href: test/parallel-testing-any-test-runner.md
     - name: Parallel test with VSTest
       href: test/parallel-testing-vstest.md
-    - name: Flaky test management
+    - name: Manage flaky tests
       href: test/flaky-test-management.md
-    - name: UI testing considerations
-      href: test/ui-testing-considerations.md
+    - name: Use Test Impact Analysis
+      href: test/test-impact-analysis.md
+
   - name: Package
     items:
     - name: NuGet
