--- a/docs/organizations/accounts/toc.yml
+++ b/docs/organizations/accounts/toc.yml
@@ -63,7 +63,7 @@
         href: add-users-to-azure-ad.md
       - name: Delete users connected to Azure AD
         href: delete-users-from-services-aad.md
-      - name: Restrict organization creation with tenant policy
+      - name: Restrict create organization policy
         href: azure-ad-tenant-policy-restrict-org-creation.md
       - name: FAQ 
         href: faq-azure-access.md#faq-connect    
