--- a/docs/pipelines/toc.yml
+++ b/docs/pipelines/toc.yml
@@ -284,7 +284,7 @@
       href: artifacts/symbols.md
     - name: Universal 
       href: artifacts/universal-packages.md
-  - name: Caching (preview)
+  - name: Caching
     href: caching/index.md
   - name: Conditions
     href: process/conditions.md
