--- a/docs/artifacts/toc.yml
+++ b/docs/artifacts/toc.yml
@@ -68,7 +68,7 @@
     items:
     - name: Publish a NuGet package
       href: nuget/publish.md
-    - name: Consume NuGet packages
+    - name: Consume NuGet packages in Visual Studio
       href: nuget/consume.md
     - name: Use NuGet with Azure DevOps Services # kill this with new connect to feed
       href: nuget/nuget-exe.md
