second set of changes

--- a/docs/reference/xml/toc.yml
+++ b/docs/reference/xml/toc.yml
@@ -1,5 +1,5 @@
 - name: On-premises XML process model
-  href: ../on-premises-xml-process-model.md?toc=/azure/devops/reference/toc.json&bc=/azure/devops/reference/breadcrumb/toc.json
+  href: ../on-premises-xml-process-model.md 
 - name: How-to Guides
   items:
     - name: Fields
