--- a/docs/boards/toc.yml
+++ b/docs/boards/toc.yml
@@ -54,8 +54,10 @@
   items:
   - name: Work in Excel or Project
     href: backlogs/office/track-work.md
-  - name: Bulk add or modify (Excel)
+  - name: Bulk add or modify work items (Excel)
     href: backlogs/office/bulk-add-modify-work-items-excel.md
+  - name: Excel FAQs
+    href: backlogs/office/faqs.md
   - name: "Create backlog items & tasks (Project)"
     href: backlogs/office/create-your-backlog-tasks-using-project.md
   - name: Schedule projects using Project
