some more fixes

--- a/docs/marketplace-extensibility/index.yml
+++ b/docs/marketplace-extensibility/index.yml
@@ -40,7 +40,7 @@ landingContent:
       - linkListType: video
         links:
           - text: Develop an Azure DevOps Services extension with continuous delivery pipeline
-            url: .https://www.youtube.com/watch?v=uzQFvYY0xiM&list=PLe14MLC-Nwy6saThL6NSv2rTtFNpkvfp3
+            url: https://www.youtube.com/watch?v=uzQFvYY0xiM&list=PLe14MLC-Nwy6saThL6NSv2rTtFNpkvfp3
       - linkListType: quickstart
         links:
           - text: Develop a web extension
