--- a/docs/organizations/accounts/toc.yml
+++ b/docs/organizations/accounts/toc.yml
@@ -1,7 +1,6 @@
 - name: Manage organizations
-  href: index.md?toc=/azure/devops/organizations/accounts/toc.json&bc=/azure/devops/organizations/accounts/breadcrumb/toc.json
 - name: About managing organizations
-  href: organization-management.md?toc=/azure/devops/organizations/accounts/toc.json&bc=/azure/devops/organizations/accounts/breadcrumb/toc.json
+  href: organization-management.md
 - name: Access with Azure AD
   href: access-with-azure-ad.md
 - name: Create your organization or project collection
