--- a/docs/report/powerbi/toc.yml
+++ b/docs/report/powerbi/toc.yml
@@ -79,6 +79,8 @@
         href: sample-boards-leadcycletime.md
       - name: Add a team slicer
         href: sample-boards-teamslicer.md
+    - name: Requirements tracking
+      href: sample-stories-overview.md
     - name: Sample Test Plans reports
       items:
       - name: Progress status
